geolog-lang/test/mathieu.output
-- tokens
Decl theory (0:6)
AIdent MathieuTemplate (7:22)
SKeyword := (23:25)
Block sig (26:29)
Nl (29:30)
AIdent Point (32:37)
SKeyword : (38:39)
AKeyword Query (40:45)
Nl (45:46)
AIdent Quad (48:52)
SKeyword : (53:54)
AKeyword Query (55:60)
Nl (63:102)
AIdent q0 (130:132)
SKeyword : (133:134)
AIdent Quad (135:139)
SKeyword -> (140:142)
AIdent Point (143:148)
Nl (148:149)
AIdent q1 (151:153)
SKeyword : (154:155)
AIdent Quad (156:160)
SKeyword -> (161:163)
AIdent Point (164:169)
Nl (169:170)
AIdent q2 (172:174)
SKeyword : (175:176)
AIdent Quad (177:181)
SKeyword -> (182:184)
AIdent Point (185:190)
Nl (190:191)
AIdent q3 (193:195)
SKeyword : (196:197)
AIdent Quad (198:202)
SKeyword -> (203:205)
AIdent Point (206:211)
Nl (211:212)
Nl (212:213)
AIdent act (232:235)
SKeyword : (236:237)
AIdent Quad (238:242)
SKeyword -> (243:245)
AIdent Point (246:251)
SKeyword -> (252:254)
AIdent Point (255:260)
Nl (260:261)
Nl (261:262)
AIdent mul (289:292)
SKeyword : (293:294)
AIdent Quad (295:299)
SKeyword -> (300:302)
AIdent Quad (303:307)
SKeyword -> (308:310)
AIdent Quad (311:315)
Nl (315:316)
Nl (316:317)
AIdent base0 (391:396)
SKeyword : (397:398)
AIdent Point (399:404)
Nl (404:405)
AIdent base1 (407:412)
SKeyword : (413:414)
AIdent Point (415:420)
Nl (420:421)
AIdent base2 (423:428)
SKeyword : (429:430)
AIdent Point (431:436)
Nl (436:437)
AIdent base3 (439:444)
SKeyword : (445:446)
AIdent Point (447:452)
Nl (452:453)
Nl (453:454)
Nl (456:474)
AIdent make_quad (476:485)
SKeyword : (485:486)
AIdent Point (487:492)
SKeyword -> (493:495)
AIdent Point (496:501)
SKeyword -> (502:504)
AIdent Point (505:510)
SKeyword -> (511:513)
AIdent Point (514:519)
SKeyword -> (520:522)
AIdent Quad (523:527)
Nl (527:528)
Nl (528:529)
AIdent ax/quad_gen (598:609)
SKeyword : (610:611)
LParen (612:613)
AIdent a (613:614)
SKeyword : (615:616)
AIdent Point (617:622)
RParen (622:623)
SKeyword -> (624:626)
LParen (627:628)
AIdent b (628:629)
SKeyword : (630:631)
AIdent Point (632:637)
RParen (637:638)
SKeyword -> (639:641)
LParen (642:643)
AIdent c (643:644)
SKeyword : (645:646)
AIdent Point (647:652)
RParen (652:653)
SKeyword -> (654:656)
LParen (657:658)
AIdent d (658:659)
SKeyword : (660:661)
AIdent Point (662:667)
RParen (667:668)
SKeyword -> (669:671)
LParen (672:673)
Nl (673:674)
LParen (678:679)
AIdent a (679:680)
SKeyword = (681:682)
AIdent b (683:684)
RParen (684:685)
SIdent / (686:688)
LParen (689:690)
AIdent b (690:691)
SKeyword = (692:693)
AIdent c (694:695)
RParen (695:696)
SIdent / (697:699)
LParen (700:701)
AIdent a (701:702)
SKeyword = (703:704)
AIdent c (705:706)
RParen (706:707)
SIdent / (708:710)
LParen (711:712)
AIdent a (712:713)
SKeyword = (714:715)
AIdent d (716:717)
RParen (717:718)
SIdent / (719:721)
LParen (722:723)
AIdent b (723:724)
SKeyword = (725:726)
AIdent d (727:728)
RParen (728:729)
SIdent / (730:732)
LParen (733:734)
AIdent c (734:735)
SKeyword = (736:737)
AIdent d (738:739)
RParen (739:740)
SIdent / (741:743)
LParen (744:745)
Nl (745:746)
LParen (752:753)
AIdent q0 (753:755)
LParen (756:757)
AIdent make_quad (757:766)
AIdent a (767:768)
AIdent b (769:770)
AIdent c (771:772)
AIdent d (773:774)
RParen (774:775)
SKeyword = (776:777)
AIdent a (778:779)
RParen (779:780)
SIdent / (781:782)
Nl (784:785)
LParen (791:792)
AIdent q1 (792:794)
LParen (795:796)
AIdent make_quad (796:805)
AIdent a (806:807)
AIdent b (808:809)
AIdent c (810:811)
AIdent d (812:813)
RParen (813:814)
SKeyword = (815:816)
AIdent b (817:818)
RParen (818:819)
SIdent / (820:821)
Nl (823:824)
LParen (830:831)
AIdent q2 (831:833)
LParen (834:835)
AIdent make_quad (835:844)
AIdent a (845:846)
AIdent b (847:848)
AIdent c (849:850)
AIdent d (851:852)
RParen (852:853)
SKeyword = (854:855)
AIdent c (856:857)
RParen (857:858)
SIdent / (859:860)
Nl (860:862)
LParen (868:869)
AIdent q3 (869:871)
LParen (872:873)
AIdent make_quad (873:882)
AIdent a (883:884)
AIdent b (885:886)
AIdent c (887:888)
AIdent d (889:890)
RParen (890:891)
SKeyword = (892:893)
AIdent d (894:895)
RParen (895:896)
Nl (896:897)
RParen (901:902)
Nl (902:903)
RParen (905:906)
Nl (906:907)
Nl (907:908)
AIdent ax/sharp (910:918)
SKeyword : (919:920)
LParen (921:922)
AIdent q (922:923)
SKeyword : (924:925)
AIdent Quad (926:930)
RParen (930:931)
SKeyword -> (932:934)
AIdent q (935:936)
SKeyword = (937:938)
AIdent make_quad (939:948)
LParen (949:950)
AIdent q0 (950:952)
AIdent q (953:954)
RParen (954:955)
LParen (956:957)
AIdent q1 (957:959)
AIdent q (960:961)
RParen (961:962)
LParen (963:964)
AIdent q2 (964:966)
AIdent q (967:968)
RParen (968:969)
LParen (970:971)
AIdent q3 (971:973)
AIdent q (974:975)
RParen (975:976)
Nl (976:977)
Nl (977:978)
AIdent ax/quad_acts_basepoints (1036:1059)
SKeyword : (1060:1061)
LParen (1062:1063)
AIdent q (1063:1064)
SKeyword : (1065:1066)
AIdent Quad (1067:1071)
RParen (1071:1072)
SKeyword -> (1073:1075)
LParen (1076:1077)
AIdent b (1077:1078)
SKeyword : (1079:1080)
AIdent Point (1081:1086)
RParen (1086:1087)
SKeyword -> (1088:1090)
LParen (1091:1092)
Nl (1092:1093)
LParen (1097:1098)
AIdent act (1098:1101)
AIdent q (1102:1103)
AIdent base0 (1104:1109)
SKeyword = (1110:1111)
AIdent q0 (1112:1114)
AIdent q (1115:1116)
RParen (1116:1117)
SIdent / (1118:1119)
Nl (1119:1121)
LParen (1125:1126)
AIdent act (1126:1129)
AIdent q (1130:1131)
AIdent base1 (1132:1137)
SKeyword = (1138:1139)
AIdent q1 (1140:1142)
AIdent q (1143:1144)
RParen (1144:1145)
SIdent / (1146:1147)
Nl (1147:1149)
LParen (1153:1154)
AIdent act (1154:1157)
AIdent q (1158:1159)
AIdent base2 (1160:1165)
SKeyword = (1166:1167)
AIdent q2 (1168:1170)
AIdent q (1171:1172)
RParen (1172:1173)
SIdent / (1174:1175)
Nl (1175:1177)
LParen (1181:1182)
AIdent act (1182:1185)
AIdent q (1186:1187)
AIdent base3 (1188:1193)
SKeyword = (1194:1195)
AIdent q3 (1196:1198)
AIdent q (1199:1200)
RParen (1200:1201)
Nl (1201:1202)
RParen (1204:1205)
Nl (1205:1206)
Nl (1206:1207)
AIdent ax/act_mul (1244:1254)
SKeyword : (1255:1256)
LParen (1257:1258)
AIdent q (1258:1259)
SKeyword : (1260:1261)
AIdent Quad (1262:1266)
RParen (1266:1267)
SKeyword -> (1268:1270)
LParen (1271:1272)
AIdent r (1272:1273)
SKeyword : (1274:1275)
AIdent Quad (1276:1280)
RParen (1280:1281)
SKeyword -> (1282:1284)
AIdent p (1285:1286)
SKeyword : (1287:1288)
AIdent Point (1289:1294)
SKeyword -> (1295:1297)
AIdent act (1298:1301)
LParen (1302:1303)
AIdent mul (1303:1306)
AIdent q (1307:1308)
AIdent r (1309:1310)
RParen (1310:1311)
AIdent p (1312:1313)
SKeyword = (1314:1315)
AIdent act (1316:1319)
AIdent q (1320:1321)
LParen (1322:1323)
AIdent act (1323:1326)
AIdent r (1327:1328)
AIdent p (1329:1330)
RParen (1330:1331)
Nl (1331:1332)
Nl (1332:1333)
AIdent ax/mul_assoc (1371:1383)
SKeyword : (1384:1385)
LParen (1386:1387)
AIdent q (1387:1388)
SKeyword : (1389:1390)
AIdent Quad (1391:1395)
RParen (1395:1396)
SKeyword -> (1397:1399)
LParen (1400:1401)
AIdent r (1401:1402)
SKeyword : (1403:1404)
AIdent Quad (1405:1409)
RParen (1409:1410)
SKeyword -> (1411:1413)
LParen (1414:1415)
AIdent s (1415:1416)
SKeyword : (1417:1418)
AIdent Quad (1419:1423)
RParen (1423:1424)
SKeyword -> (1425:1427)
AIdent mul (1428:1431)
LParen (1432:1433)
AIdent mul (1433:1436)
AIdent q (1437:1438)
AIdent r (1439:1440)
RParen (1440:1441)
AIdent s (1442:1443)
SKeyword = (1445:1446)
AIdent mul (1447:1450)
AIdent q (1451:1452)
LParen (1453:1454)
AIdent mul (1454:1457)
AIdent r (1458:1459)
AIdent s (1460:1461)
RParen (1461:1462)
Nl (1462:1463)
Nl (1463:1464)
End end (1464:1467)
Nl (1467:1468)
Nl (1468:1469)
Nl (1469:1840)
Eof (1840:1840)

-- notation
Decl theory (0:1467)
  Infix (7:1467)
    Ident MathieuTemplate (7:22)
    Keyword := (23:25)
    Block sig (26:1467)
      Infix (32:45)
        Ident Point (32:37)
        Keyword : (38:39)
        Keyword Query (40:45)
      Infix (48:60)
        Ident Quad (48:52)
        Keyword : (53:54)
        Keyword Query (55:60)
      Infix (130:148)
        Ident q0 (130:132)
        Keyword : (133:134)
        Infix (135:148)
          Ident Quad (135:139)
          Keyword -> (140:142)
          Ident Point (143:148)
      Infix (151:169)
        Ident q1 (151:153)
        Keyword : (154:155)
        Infix (156:169)
          Ident Quad (156:160)
          Keyword -> (161:163)
          Ident Point (164:169)
      Infix (172:190)
        Ident q2 (172:174)
        Keyword : (175:176)
        Infix (177:190)
          Ident Quad (177:181)
          Keyword -> (182:184)
          Ident Point (185:190)
      Infix (193:211)
        Ident q3 (193:195)
        Keyword : (196:197)
        Infix (198:211)
          Ident Quad (198:202)
          Keyword -> (203:205)
          Ident Point (206:211)
      Infix (232:260)
        Ident act (232:235)
        Keyword : (236:237)
        Infix (238:260)
          Ident Quad (238:242)
          Keyword -> (243:245)
          Infix (246:260)
            Ident Point (246:251)
            Keyword -> (252:254)
            Ident Point (255:260)
      Infix (289:315)
        Ident mul (289:292)
        Keyword : (293:294)
        Infix (295:315)
          Ident Quad (295:299)
          Keyword -> (300:302)
          Infix (303:315)
            Ident Quad (303:307)
            Keyword -> (308:310)
            Ident Quad (311:315)
      Infix (391:404)
        Ident base0 (391:396)
        Keyword : (397:398)
        Ident Point (399:404)
      Infix (407:420)
        Ident base1 (407:412)
        Keyword : (413:414)
        Ident Point (415:420)
      Infix (423:436)
        Ident base2 (423:428)
        Keyword : (429:430)
        Ident Point (431:436)
      Infix (439:452)
        Ident base3 (439:444)
        Keyword : (445:446)
        Ident Point (447:452)
      Infix (476:527)
        Ident make_quad (476:485)
        Keyword : (485:486)
        Infix (487:527)
          Ident Point (487:492)
          Keyword -> (493:495)
          Infix (496:527)
            Ident Point (496:501)
            Keyword -> (502:504)
            Infix (505:527)
              Ident Point (505:510)
              Keyword -> (511:513)
              Infix (514:527)
                Ident Point (514:519)
                Keyword -> (520:522)
                Ident Quad (523:527)
      Infix (598:895)
        Ident ax/quad_gen (598:609)
        Keyword : (610:611)
        Infix (613:895)
          Infix (613:622)
            Ident a (613:614)
            Keyword : (615:616)
            Ident Point (617:622)
          Keyword -> (624:626)
          Infix (628:895)
            Infix (628:637)
              Ident b (628:629)
              Keyword : (630:631)
              Ident Point (632:637)
            Keyword -> (639:641)
            Infix (643:895)
              Infix (643:652)
                Ident c (643:644)
                Keyword : (645:646)
                Ident Point (647:652)
              Keyword -> (654:656)
              Infix (658:895)
                Infix (658:667)
                  Ident d (658:659)
                  Keyword : (660:661)
                  Ident Point (662:667)
                Keyword -> (669:671)
                Infix (679:895)
                  Infix (679:739)
                    Infix (679:728)
                      Infix (679:717)
                        Infix (679:706)
                          Infix (679:695)
                            Infix (679:684)
                              Ident a (679:680)
                              Keyword = (681:682)
                              Ident b (683:684)
                            Ident / (686:688)
                            Infix (690:695)
                              Ident b (690:691)
                              Keyword = (692:693)
                              Ident c (694:695)
                          Ident / (697:699)
                          Infix (701:706)
                            Ident a (701:702)
                            Keyword = (703:704)
                            Ident c (705:706)
                        Ident / (708:710)
                        Infix (712:717)
                          Ident a (712:713)
                          Keyword = (714:715)
                          Ident d (716:717)
                      Ident / (719:721)
                      Infix (723:728)
                        Ident b (723:724)
                        Keyword = (725:726)
                        Ident d (727:728)
                    Ident / (730:732)
                    Infix (734:739)
                      Ident c (734:735)
                      Keyword = (736:737)
                      Ident d (738:739)
                  Ident / (741:743)
                  Infix (753:895)
                    Infix (753:857)
                      Infix (753:818)
                        Infix (753:779)
                          App (753:774)
                            Ident q0 (753:755)
                            App (757:774)
                              Ident make_quad (757:766)
                              Ident a (767:768)
                              Ident b (769:770)
                              Ident c (771:772)
                              Ident d (773:774)
                          Keyword = (776:777)
                          Ident a (778:779)
                        Ident / (781:782)
                        Infix (792:818)
                          App (792:813)
                            Ident q1 (792:794)
                            App (796:813)
                              Ident make_quad (796:805)
                              Ident a (806:807)
                              Ident b (808:809)
                              Ident c (810:811)
                              Ident d (812:813)
                          Keyword = (815:816)
                          Ident b (817:818)
                      Ident / (820:821)
                      Infix (831:857)
                        App (831:852)
                          Ident q2 (831:833)
                          App (835:852)
                            Ident make_quad (835:844)
                            Ident a (845:846)
                            Ident b (847:848)
                            Ident c (849:850)
                            Ident d (851:852)
                        Keyword = (854:855)
                        Ident c (856:857)
                    Ident / (859:860)
                    Infix (869:895)
                      App (869:890)
                        Ident q3 (869:871)
                        App (873:890)
                          Ident make_quad (873:882)
                          Ident a (883:884)
                          Ident b (885:886)
                          Ident c (887:888)
                          Ident d (889:890)
                      Keyword = (892:893)
                      Ident d (894:895)
      Infix (910:975)
        Ident ax/sharp (910:918)
        Keyword : (919:920)
        Infix (922:975)
          Infix (922:930)
            Ident q (922:923)
            Keyword : (924:925)
            Ident Quad (926:930)
          Keyword -> (932:934)
          Infix (935:975)
            Ident q (935:936)
            Keyword = (937:938)
            App (939:975)
              Ident make_quad (939:948)
              App (950:954)
                Ident q0 (950:952)
                Ident q (953:954)
              App (957:961)
                Ident q1 (957:959)
                Ident q (960:961)
              App (964:968)
                Ident q2 (964:966)
                Ident q (967:968)
              App (971:975)
                Ident q3 (971:973)
                Ident q (974:975)
      Infix (1036:1200)
        Ident ax/quad_acts_basepoints (1036:1059)
        Keyword : (1060:1061)
        Infix (1063:1200)
          Infix (1063:1071)
            Ident q (1063:1064)
            Keyword : (1065:1066)
            Ident Quad (1067:1071)
          Keyword -> (1073:1075)
          Infix (1077:1200)
            Infix (1077:1086)
              Ident b (1077:1078)
              Keyword : (1079:1080)
              Ident Point (1081:1086)
            Keyword -> (1088:1090)
            Infix (1098:1200)
              Infix (1098:1172)
                Infix (1098:1144)
                  Infix (1098:1116)
                    App (1098:1109)
                      Ident act (1098:1101)
                      Ident q (1102:1103)
                      Ident base0 (1104:1109)
                    Keyword = (1110:1111)
                    App (1112:1116)
                      Ident q0 (1112:1114)
                      Ident q (1115:1116)
                  Ident / (1118:1119)
                  Infix (1126:1144)
                    App (1126:1137)
                      Ident act (1126:1129)
                      Ident q (1130:1131)
                      Ident base1 (1132:1137)
                    Keyword = (1138:1139)
                    App (1140:1144)
                      Ident q1 (1140:1142)
                      Ident q (1143:1144)
                Ident / (1146:1147)
                Infix (1154:1172)
                  App (1154:1165)
                    Ident act (1154:1157)
                    Ident q (1158:1159)
                    Ident base2 (1160:1165)
                  Keyword = (1166:1167)
                  App (1168:1172)
                    Ident q2 (1168:1170)
                    Ident q (1171:1172)
              Ident / (1174:1175)
              Infix (1182:1200)
                App (1182:1193)
                  Ident act (1182:1185)
                  Ident q (1186:1187)
                  Ident base3 (1188:1193)
                Keyword = (1194:1195)
                App (1196:1200)
                  Ident q3 (1196:1198)
                  Ident q (1199:1200)
      Infix (1244:1330)
        Infix (1244:1286)
          Ident ax/act_mul (1244:1254)
          Keyword : (1255:1256)
          Infix (1258:1286)
            Infix (1258:1266)
              Ident q (1258:1259)
              Keyword : (1260:1261)
              Ident Quad (1262:1266)
            Keyword -> (1268:1270)
            Infix (1272:1286)
              Infix (1272:1280)
                Ident r (1272:1273)
                Keyword : (1274:1275)
                Ident Quad (1276:1280)
              Keyword -> (1282:1284)
              Ident p (1285:1286)
        Keyword : (1287:1288)
        Infix (1289:1330)
          Ident Point (1289:1294)
          Keyword -> (1295:1297)
          Infix (1298:1330)
            App (1298:1313)
              Ident act (1298:1301)
              App (1303:1310)
                Ident mul (1303:1306)
                Ident q (1307:1308)
                Ident r (1309:1310)
              Ident p (1312:1313)
            Keyword = (1314:1315)
            App (1316:1330)
              Ident act (1316:1319)
              Ident q (1320:1321)
              App (1323:1330)
                Ident act (1323:1326)
                Ident r (1327:1328)
                Ident p (1329:1330)
      Infix (1371:1461)
        Ident ax/mul_assoc (1371:1383)
        Keyword : (1384:1385)
        Infix (1387:1461)
          Infix (1387:1395)
            Ident q (1387:1388)
            Keyword : (1389:1390)
            Ident Quad (1391:1395)
          Keyword -> (1397:1399)
          Infix (1401:1461)
            Infix (1401:1409)
              Ident r (1401:1402)
              Keyword : (1403:1404)
              Ident Quad (1405:1409)
            Keyword -> (1411:1413)
            Infix (1415:1461)
              Infix (1415:1423)
                Ident s (1415:1416)
                Keyword : (1417:1418)
                Ident Quad (1419:1423)
              Keyword -> (1425:1427)
              Infix (1428:1461)
                App (1428:1443)
                  Ident mul (1428:1431)
                  App (1433:1440)
                    Ident mul (1433:1436)
                    Ident q (1437:1438)
                    Ident r (1439:1440)
                  Ident s (1442:1443)
                Keyword = (1445:1446)
                App (1447:1461)
                  Ident mul (1447:1450)
                  Ident q (1451:1452)
                  App (1454:1461)
                    Ident mul (1454:1457)
                    Ident r (1458:1459)
                    Ident s (1460:1461)

-- elaborated


-- messages

error[E0000]: Unexpected character '\'
29 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
29 |             ^

error[E0000]: Unexpected character '\'
29 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
29 |                        ^

error[E0000]: Unexpected character '\'
29 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
29 |                                   ^

error[E0000]: Unexpected character '\'
29 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
29 |                                              ^

error[E0000]: Unexpected character '\'
29 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
29 |                                                         ^

error[E0000]: Unexpected character '\'
29 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
29 |                                                                    ^

error[E0000]: Unexpected character '\'
30 |       (q0 (make_quad a b c d) = a) /\ 
30 |                                     ^

error[E0000]: Unexpected character '\'
31 |       (q1 (make_quad a b c d) = b) /\ 
31 |                                     ^

error[E0000]: Unexpected character '\'
32 |       (q2 (make_quad a b c d) = c) /\
32 |                                     ^

error[E0000]: Unexpected character '\'
41 |     (act q base0 = q0 q) /\
41 |                           ^

error[E0000]: Unexpected character '\'
42 |     (act q base1 = q1 q) /\
42 |                           ^

error[E0000]: Unexpected character '\'
43 |     (act q base2 = q2 q) /\
43 |                           ^

error[E0102]: Incompatible precedences
48 |   ax/act_mul : (q : Quad) -> (r : Quad) -> p : Point -> act (mul q r) p = act q (act r p)
48 |                                              ^

error[E0208]: unexpected notation for term in synthesizing position: Infix
29 |     (a = b) \/ (b = c) \/ (a = c) \/ (a = d) \/ (b = d) \/ (c = d) \/ (
29 |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
30 |       (q0 (make_quad a b c d) = a) /\ 
30 | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
31 |       (q1 (make_quad a b c d) = b) /\ 
31 | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
32 |       (q2 (make_quad a b c d) = c) /\
32 | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
33 |       (q3 (make_quad a b c d) = d)
33 | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
